--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,6 +15,9 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/categories">Categories</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/users">Users</a>
+      </li>
     </ul>
   </div>
 </nav>
