--- a/src/app/components/users-create/users-create.component.html
+++ b/src/app/components/users-create/users-create.component.html
@@ -13,10 +13,18 @@
       <label for="users_lastName">Last Name</label>
       <input [(ngModel)]="user.lastName" type="text" class="form-control" id="users_lastName">
     </div>
-    <div class="form-group col-md-7">
+    <div class="form-group col-md-6">
       <label for="users_email">Email</label>
       <input [(ngModel)]="user.email" type="email" class="form-control" id="users_email">
     </div>
+    <div class="form-group col-md-6">
+      <label for="users_password">Password</label>
+      <input [(ngModel)]="user.password" type="password" class="form-control" id="users_password">
+    </div>
+  </div>
+  <div class="form-group col-md-6">
+    <label for="users_role">Password</label>
+    <input [(ngModel)]="user.role" type="password" class="form-control" id="users_role">
   </div>
   <div class="row">
     <div class="col-4 offset-4 mt-2 mb-5">
