--- a/src/app/components/users-update/users-update.component.html
+++ b/src/app/components/users-update/users-update.component.html
@@ -13,9 +13,13 @@
       <label for="users_lastName">Last Name</label>
       <input [(ngModel)]="user.lastName" type="text" class="form-control" id="users_lastName">
     </div>
-    <div class="form-group col-md-7">
+    <div class="form-group col-md-6">
       <label for="users_email">Email</label>
       <input [(ngModel)]="user.email" type="email" class="form-control" id="users_email">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="users_password">Password</label>
+      <input [(ngModel)]="user.password" type="password" class="form-control" id="users_password">
     </div>
   </div>
   <div class="row">
