--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -25,6 +25,7 @@
           <th>First Name</th>
           <th>Last Name</th>
           <th>Email</th>
+          <th>Role</th>
         </tr>
         </thead>
         <tbody>
@@ -32,11 +33,12 @@
           <td> {{usr.firstName}} </td>
           <td> {{usr.lastName}} </td>
           <td> {{usr.email}} </td>
-          <td>
+          <td> {{usr.role}} </td>
+          <td class="text-nowrap">
             <a [routerLink]="'/users/update/' + usr._id" class="btn btn-sm btn-warning mr-1">
               <i class="fa fa-pencil"></i>
             </a>
-            <button [swal]="swalDel"  (confirm)="deleteUsers(usr._id) " class="btn btn-sm btn-danger">
+            <button [swal]="swalDel" (confirm)="deleteUsers(usr._id)" class="btn btn-sm btn-danger">
               <i class="fa fa-remove"></i>
             </button>
           </td>
