--- a/src/app/components/categories-create/categories-create.component.html
+++ b/src/app/components/categories-create/categories-create.component.html
@@ -1,20 +1,20 @@
 <div class="container">
-  <div class="row">
-    <div class="col-12">
-      <h1>Create new Category</h1>
+    <div class="row my-3">
+        <div class="col-12">
+            <h3>Create Category</h3>
+        </div>
     </div>
-  </div>
   <div class="row">
-    <div class="col-8">
+    <div class="col-6">
       <div class="form-group">
-        <label for="categories_title">Create title</label>
-        <input [(ngModel)]="category.title" type="text" class="form-control" id="categories_title"/>
+        <label for="category_title">Category title</label>
+        <input [(ngModel)]="category.title" type="text" class="form-control" id="category_title"/>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-4 offset-4 mt-2 mb-5">
-      <button (click)="saveCategory()" class="btn btn-success btn-block">Save</button>
+    <div class="col-6">
+      <button (click)="saveCategory()" class="btn btn-outline-info">Save category</button>
     </div>
   </div>
 </div>
