--- a/src/app/components/categories/categories.component.html
+++ b/src/app/components/categories/categories.component.html
@@ -1,47 +1,50 @@
 <div class="container">
-  <div class="row m-3">
-    <div class="col-8">
-      <h1>Category List</h1>
+    <div class="row my-3">
+
+          <div class="col-8">
+            <h3>Categories List</h3>
+          </div>
+          <div class="col-4 text-right">
+            <button class="btn btn-outline-info mr-1" (click)="getCategories()">
+              <i class="fa fa-refresh"></i>
+            </button>
+            <a class="btn  btn-outline-info" routerLink="/categories/create">
+              <i class="fa fa-plus"></i> Add category
+            </a>
+
+          </div>
+
     </div>
-    <div class="col-4 text-right">
-      <button class="btn btn-info" (click)="getCategories()">
-        <i class="fa fa-refresh"></i>
-      </button>
-      <a class="btn btn-primary" routerLink="/categories/create">
-        <i class="fa fa-plus"></i> Create Category
-      </a>
-    </div>
-  </div>
-  <div class="row" *ngIf="loading">
-    <div class="col text-center">
-      <div class="spinner-border" role="status"></div>
-    </div>
-  </div>
   <div class="row">
-    <div class="col-12">
-      <table class="table table-striped table-dark table-bordered">
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th>Tools</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let cat of categories">
-            <td> {{cat.title}} </td>
-            <td>
-              <a [routerLink]="'/categories/update/' + cat._id" class="btn btn-sm btn-warning mr-1">
+      <div class="col-12">
+          <table class="table table-stripped table-dark table-bordered">
+            <thead>
+            <tr>
+              <th>#</th>
+              <th>id</th>
+              <th>title</th>
+              <th>tools</th>
+            </tr>
+            </thead>
+              <tbody>
+          <tr *ngFor="let cat of categories; let i = index">
+              <td>{{ i + 1 }}</td>
+              <td>{{cat._id}}</td>
+              <td>{{cat.title}}</td>
+            <td class="text-nowrap">
+
+              <a [routerLink]="'/categories/update/' + cat._id" class="btn btn-sm btn-outline-warning mr-1">
                 <i class="fa fa-pencil"></i>
               </a>
-              <button [swal]="swalDel" (confirm)="deleteCategories(cat._id)" class="btn btn-sm btn-danger">
+              <button (click)="deleteCategory(cat._id)" class="btn btn-sm btn-outline-danger">
                 <i class="fa fa-remove"></i>
               </button>
             </td>
+
           </tr>
-        </tbody>
-      </table>
-    </div>
+          </tbody>
+
+          </table>
+      </div>
   </div>
 </div>
-
-
