--- a/src/app/components/categories/categories.component.html
+++ b/src/app/components/categories/categories.component.html
@@ -15,6 +15,11 @@
           </div>
 
     </div>
+  <div class="row" *ngIf="loading">
+    <div class="col text-center">
+      <div class="spinner-border" role="status"></div>
+    </div>
+  </div>
   <div class="row">
       <div class="col-12">
           <table class="table table-stripped table-dark table-bordered">
