--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -12,6 +12,11 @@
       </a>
     </div>
   </div>
+  <div class="row" *ngIf="loading">
+    <div class="col text-center">
+      <div class="spinner-border" role="status"></div>
+    </div>
+  </div>
 
   <div class="row">
     <div class="col-12">
