--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,57 +1,57 @@
 <div class="container">
-    <div class="row my-3">
-        <div class="col-8">
-            <h3>Products List</h3>
-        </div>
-        <div class="col-4 text-right">
-            <button class="btn btn-outline-info mr-1" (click)="getProducts()">
-                <i class="fa fa-refresh"></i>
-            </button>
-            <a class="btn btn-outline-info" routerLink="/products/create">
-                <i class="fa fa-plus"></i> Create Product
-            </a>
-        </div>
+  <div class="row my-3">
+    <div class="col-8">
+      <h3>Products List</h3>
     </div>
-    <div class="row" *ngIf="loading">
-        <div class="col text-center">
-            <div class="spinner-border" role="status"></div>
-        </div>
+    <div class="col-4 text-right">
+      <button class="btn btn-outline-info mr-1" (click)="getProducts()">
+        <i class="fa fa-refresh"></i>
+      </button>
+      <a class="btn btn-outline-info" routerLink="/products/create">
+        <i class="fa fa-plus"></i> Create Product
+      </a>
     </div>
-    <div class="row">
-        <div class="col-12">
-            <div class="table-responsive">
-                <table class="table table-bordered table-dark table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Photo</th>
-                            <th scope="col">Title</th>
-                            <th scope="col">Mini Description</th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Category</th>
-                            <th scope="col">Tools</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let p of products; let i = index">
-                            <td>{{i + 1}}</td>
-                            <td><img [src]="p.photo" height="30" /></td>
-                            <td>{{ p.title }}</td>
-                            <td>{{ p.miniDescription }}</td>
-                            <td>{{ p.price }}</td>
-                            <td>{{ p.category.title }}</td>
-                            <td class="text-nowrap">
-                                <a [routerLink]="'/products/update/' + p._id" class="btn btn-sm btn-outline-warning mr-1">
-                                    <i class="fa fa-pencil"></i>
-                                </a>
-                                <button (click)="deleteProduct(p._id)" class="btn btn-sm btn-outline-danger">
-                                    <i class="fa fa-remove"></i>
-                                </button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+  </div>
+  <div class="row" *ngIf="loading">
+    <div class="col text-center">
+      <div class="spinner-border" role="status"></div>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <div class="table-responsive">
+        <table class="table table-bordered table-dark table-striped">
+          <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Photo</th>
+            <th scope="col">Title</th>
+            <th scope="col">Mini Description</th>
+            <th scope="col">Price</th>
+            <th scope="col">Category</th>
+            <th scope="col">Tools</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let p of products; let i = index">
+            <td>{{i + 1}}</td>
+            <td><img [src]="p.photo" height="30" /></td>
+            <td>{{ p.title }}</td>
+            <td>{{ p.miniDescription }}</td>
+            <td>{{ p.price }}&euro;</td>
+            <td>{{ p.category.title }}</td>
+            <td class="text-nowrap">
+              <a [routerLink]="'/products/update/' + p._id" class="btn btn-sm btn-outline-warning mr-1">
+                <i class="fa fa-pencil"></i>
+              </a>
+              <button (click)="deleteProduct(p._id)" class="btn btn-sm btn-outline-danger">
+                <i class="fa fa-remove"></i>
+              </button>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </div>
