--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
     <span class="text-white mr-3">
       Hello
       <b>
-        {{user.firstName}}
+        {{user?.firstName}}
       </b>
     </span>
     <button (click)="logout()" class="btn btn-sm btn-light">Logout</button>
