--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -26,6 +26,7 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Id</th>
+            <th scope="col">Role</th>
             <th scope="col">FirstName</th>
             <th scope="col">LastName</th>
             <th scope="col">Email</th>
@@ -37,6 +38,7 @@
           <tr *ngFor="let user of users; let i = index">
             <td>{{ i + 1 }}</td>
             <td>{{user._id}}</td>
+            <td>{{user.role}}</td>
             <td>{{user.firstName}}</td>
             <td>{{user.lastName}}</td>
             <td>{{user.email}}</td>
@@ -44,7 +46,7 @@
               <a [routerLink]="'/users/update/' + user._id" class="btn btn-sm btn-outline-warning mr-1">
                 <i class="fa fa-pencil"></i>
               </a>
-              <button (click)="deleteUser(user._id)" class="btn btn-sm btn-outline-danger">
+              <button [swal]="swalDel" (confirm)="deleteUser(user._id)" class="btn btn-sm btn-outline-danger">
                 <i class="fa fa-remove"></i>
               </button>
             </td>
